[package]
name = "framekey"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
nightshade = { version = "0.6.70", features = ["egui"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
gif = "0.13"
ab_glyph = "0.2"
base64 = "0.22"
usvg = "0.45"
rodio = "0.21"
i_overlay = "4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[features]
default = ["tracing"]
scripting = ["nightshade/scripting"]
openxr = ["nightshade/openxr"]
steam = ["nightshade/steam"]
tracing = ["nightshade/tracing"]
mcp = ["nightshade/mcp"]

# For very small final binary size,
# uncomment the following release profile and build with it

# [profile.release]
# codegen-units = 1 # Reduce parallel code generation units
# strip = true      # Automatically strip symbols from the binary.
# opt-level = "z"   # Optimize for size
# lto = true        # Link time optimization
# panic = "abort"   # On panic, abort immediately rather than unwinding. Don't use this if you want backtraces.

# Then compress the final executable further with:
# upx --best --lzma ./target/release/app
#
# Or on windows,
# upx --best --lzma ./target/release/app.exe
